@@ -2378,6 +2378,7 @@ class MeetingConfig(OrderedBaseFolder, BrowserDefaultMixin):
                      'presented_item_back_to_prevalidated',
                      'return_to_proposing_group', 'return_to_proposing_group_with_last_validation',
                      'return_to_proposing_group_with_all_validations',
+                     'decide_item_when_back_to_meeting_from_returned_to_proposing_group',
                      'hide_decisions_when_under_writing', 'waiting_advices',
                      'accepted_out_of_meeting', 'accepted_out_of_meeting_and_duplicated',
                      'accepted_out_of_meeting_emergency', 'accepted_out_of_meeting_emergency_and_duplicated',
