@@ -43,6 +43,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   popup behind the 'Change delay for advice' grey clock icon
 - Added action 'Update items and meetings' on the MeetingConfig to only update elements of selected MeetingConfig in addition to already existing
   same action on portal_plonemeeting that will update items and meetings of every MeetingConfigs
+- Added WFAdaptation 'decide_item_when_back_to_meeting_from_returned_to_proposing_group' that will automatically decide (depending on constant
+  ITEM_TRANSITION_WHEN_RETURNED_FROM_PROPOSING_GROUP_AFTER_CORRECTION) an item that is back from returned_to_proposing_group
 
 4.1b16 (2019-01-31)
 -------------------
